
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct crypto_spawn {int dummy; } ;
struct crypto_instance {int dummy; } ;
struct crypto_alg {int dummy; } ;


 int CRYPTO_ALG_ASYNC ;
 int CRYPTO_ALG_TYPE_MASK ;
 struct crypto_instance* ERR_PTR (int) ;
 scalar_t__ IS_ERR (struct crypto_instance*) ;
 struct crypto_instance* crypto_alloc_instance2 (char const*,struct crypto_alg*,int ) ;
 int crypto_init_spawn (struct crypto_spawn*,struct crypto_alg*,struct crypto_instance*,int) ;
 struct crypto_spawn* crypto_instance_ctx (struct crypto_instance*) ;
 int kfree (struct crypto_instance*) ;

struct crypto_instance *crypto_alloc_instance(const char *name,
           struct crypto_alg *alg)
{
 struct crypto_instance *inst;
 struct crypto_spawn *spawn;
 int err;

 inst = crypto_alloc_instance2(name, alg, 0);
 if (IS_ERR(inst))
  goto out;

 spawn = crypto_instance_ctx(inst);
 err = crypto_init_spawn(spawn, alg, inst,
    CRYPTO_ALG_TYPE_MASK | CRYPTO_ALG_ASYNC);

 if (err)
  goto err_free_inst;

 return inst;

err_free_inst:
 kfree(inst);
 inst = ERR_PTR(err);

out:
 return inst;
}
